@@ -22,6 +22,7 @@
 - Fixed bug where 'Limited' message/warning/error fields were not being displayed properly (Issue #147)
 - Fixed bug where temporary log file would sometimes not be copied to permanent log file. (Issue #148)
 - Created a sample .rc file (dupReport.rc.EXAMPLE) to show how various configuration options work in a real-world scenario (Issue #149)
+- Added [apprise] section to .rc file by default (instead of previous optional status) and made it easier for users to enable/disable it at will (Issue #150)
 
 2.2.12
 ------
